--- a/index.html
+++ b/index.html
@@ -2,112 +2,124 @@
 <html>
   <head>
     <title>Italian Restaurant</title>
-    <link ref="stylesheet" href="" type="text/css">
+    <link rel="stylesheet" href="./css/style.css" type="text/css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 <body>
-  <header>
-    <div class="title">
-      <h1>Italian Restaurant</h1>
-    </div>
-    <ul class="header-links">
-      <li><a href="#book-here">Book Now</a></li>
-      <li><a href="#opening-times">Opening Times</a></li>
-      <li><a>Masterclass</a></li>
-      <li><a>Contact</a></li>
-    </ul>
-  </header>
-  <main>
-    <div class="background-image"></div>
-    <section class="order-section">
-      <div id="book-here">
-        <h3>Book Here</h3>
+  <div class="container">
+    <header>
+      <div class="title">
+        <h1>Italian Restaurant</h1>
       </div>
-      <div class="text-container">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <div class="navbar">
+        <ul>
+          <li><a href="#book-here">Book Now</a></li>
+          <li><a href="#opening-times">Opening Times</a></li>
+          <li><a href="#masterclass">Masterclass</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
       </div>
-      <div class="text-container">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </header>
+    <main>
+      <div class="background-image1"></div>
+      <section id="book-here" class="order-section">
+        <div class="h3-container">
+          <h3>Book Here</h3>
+        </div>
+        <div class="text-container">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+        <div class="text-container">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="order-here">
+          <p><a href="#">Order Here</a></p>
+        </div>
+      </section>
+      <section >
+        <div class="image-section">
+          <figure class="fig">
+            <img src="./media/background1.jpg" alt="">
+          </figure>
+          <figure class="fig">
+            <img src="./media/background2.jpg" alt="">
+          </figure>
+          <figure class="fig">
+            <img src="./media/background3.jpg" alt="">
+          </figure>
+          <figure class="fig">
+            <img src="./media/background4.jpg" alt="">
+          </figure>
+          <figure class="fig">
+            <img src="./media/img1.jpg" alt="">
+          </figure>
+          <figure class="fig">
+            <img src="./media/img2.jpg" alt="">
+          </figure>
+        </div>
+      </section>
+      <div class="clr"></div>
+      <div class="background-image2"></div>
+      <section id="opening-times">
+        <div class="h3-container">
+          <h3>Opening Hours</h3>
+        </div>
+         <div class="table-container">
+          <table>
+            <tr>
+              <th>Mon > Wed</th>
+              <th>Thu > Sat</th>
+              <th>Sun + Bank Holidays</th>
+            </tr>
+            <tr>
+              <td>12pm > 3pm</td>
+              <td>12pm > 3pm</td>
+              <td>Closed</td>
+            </tr>
+            <tr>
+              <td>5pm > 10pm</td>
+              <td>5pm > 11pm</td>
+              <td>Closed</td>
+            </tr>
+          </table>
+        </div>
+      </section>
+      <div class="background-image3"></div>
+      <section id="masterclass" class="masterclass">
+        <div class="h3-container">
+          <h3>Pasta Masterclass</h3>
+        </div>
+        <div class="text-container">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </section>
+      <div class="background-image4"></div>
+      <div id="contact">
+        <div class="h3-container">
+          <h3>Contact</h3>
+        </div>
+        <div class="form-container">
+          <form>
+            <label for="name">Name *</label>
+            <input type="text" id="name" name="name" required>
+            <br>
+            <label for="email">Email *</label>
+            <input type="email" id="email" name="email" required>
+            <br>
+            <label for="message">Message *</label>
+            <textarea name="message" id="message"></textarea>
+            <br>
+            <button type="submit" name="send">Send</button>
+          <form>
+        </div>
       </div>
-      <button type="submit" name="order-here">Order Here</button>
-    </section>
-    <section class="image-section">
-      <figure>
-        <img src="" alt="">
-        <figcaption></figcaption>
-      </figure>
-      <figure>
-        <img src="" alt="">
-        <figcaption></figcaption>
-      </figure>
-      <figure>
-        <img src="" alt="">
-        <figcaption></figcaption>
-      </figure>
-      <figure>
-        <img src="" alt="">
-        <figcaption></figcaption>
-      </figure>
-      <figure>
-        <img src="" alt="">
-        <figcaption></figcaption>
-      </figure>
-      <figure>
-        <img src="" alt="">
-        <figcaption></figcaption>
-      </figure>
-    </section>
-    <div class="background-image2"></div>
-    <section id="opening-times">
-      <table>
-        <caption>Opening Hours</caption>
-        <tr>
-          <th>Mon > Wed</th>
-          <th>Thu > Sat</th>
-          <th>Sun + Bank Holidays</th>
-        </tr>
-        <tr>
-          <td>12pm > 3pm</td>
-          <td>12pm > 3pm</td>
-          <td>Closed</td>
-        </tr>
-        <tr>
-          <td>5pm > 10pm</td>
-          <td>5pm > 11pm</td>
-          <td>Closed</td>
-        </tr>
-      </table>
-    </section>
-    <div class="background-image3"></div>
-    <section class="masterclass">
-      <div>
-        <h3>Pasta Masterclass</h3>
-      <div>
-      <div class="text-container">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-    </section>
-    <div class="background-image4"></div>
-    <div>
-      <h3>Contact</h3>
-      <form>
-        <label for="name">Name *</label>
-        <input type="text" id="name" name="name" required>
-        <br>
-        <label for="email">Email *</label>
-        <input type="email" id="email" name="email" required>
-        <br>
-        <label for="message">Message *</label>
-        <textarea name="message" id="message"></textarea>
-
-      <form>
-    </div>
-  </main>
-  <footer>
-    <p>Contact Us</p>
-    <p>Phone Number</p>
-    <p>Email</p>
-  </footer>
+    </main>
+    <footer>
+      <p>Contact Us</p>
+      <p>Phone Number: +44 000 000 0000</p>
+      <p>Email: email@italianrestaurant.com</p>
+    </footer>
+  </div>
 </body>
 </html>
